[gd_scene load_steps=4 format=3 uid="uid://dqtemb164ydt6"]

[ext_resource type="Script" uid="uid://cdoregfvxipyf" path="res://Scripts/WebSocket.gd" id="1_17dk5"]
[ext_resource type="Script" uid="uid://pae8je8uxtwo" path="res://Scripts/ChatManager.gd" id="1_xfcp1"]
[ext_resource type="Texture2D" uid="uid://bqympsgavtk1y" path="res://Assets/sprites/GUI/MainMenuBackground2.png" id="3_xqjog"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(2.06507, 2.0121)
script = ExtResource("1_xfcp1")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(463.423, 267.382)
scale = Vector2(0.482732, 0.497914)
texture = ExtResource("3_xqjog")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 76.995
offset_top = 20.8737
offset_right = 812.995
offset_bottom = 511.874
rotation = -0.00228135
scale = Vector2(1.06444, 0.984908)

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "CONNECT TO SERVER"

[node name="Actualizar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Actualizar"

[node name="MainPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatDisplay" type="TextEdit" parent="VBoxContainer/MainPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false

[node name="UserList" type="ItemList" parent="VBoxContainer/MainPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Commands" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="InputMessage" type="LineEdit" parent="VBoxContainer/Commands"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Send a message"
expand_to_text_length = true

[node name="SendButton" type="Button" parent="VBoxContainer/Commands"]
layout_mode = 2
text = "SEND"

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("1_17dk5")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 622.062
offset_top = 373.564
offset_right = 705.062
offset_bottom = 439.564
scale = Vector2(1.23472, 1.17642)

[node name="AcceptButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "ACEPTAR"

[node name="RejectButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "DENEGAR"

[node name="VOLVER" type="Button" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = 503.0
offset_right = 75.0
offset_bottom = 534.0
text = "VOLVER"

[node name="Invitar" type="Button" parent="."]
layout_mode = 0
offset_left = 858.0
offset_top = 502.0
offset_right = 923.0
offset_bottom = 533.0
text = "Invitar"

[connection signal="toggled" from="VBoxContainer/ConnectButton" to="." method="_on_connect_toggled"]
[connection signal="pressed" from="VBoxContainer/Actualizar" to="." method="_on_actualizar_pressed"]
[connection signal="text_submitted" from="VBoxContainer/Commands/InputMessage" to="." method="_on_input_submitted"]
[connection signal="pressed" from="VBoxContainer/Commands/SendButton" to="." method="_on_send_pressed"]
[connection signal="connected_to_server" from="WebSocketClient" to="." method="_on_web_socket_client_connected_to_server"]
[connection signal="connection_closed" from="WebSocketClient" to="." method="_on_web_socket_client_connection_closed"]
[connection signal="message_received" from="WebSocketClient" to="." method="_on_web_socket_client_message_received"]
[connection signal="pressed" from="VBoxContainer2/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/RejectButton" to="." method="_on_reject_button_pressed"]
[connection signal="pressed" from="VOLVER" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="Invitar" to="." method="_on_invitar_pressed"]
